--- a/ShaderCompile/ShaderCompile.vcxproj.filters
+++ b/ShaderCompile/ShaderCompile.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="utlstringmap.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\shared\include\CRC32.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\shared\gsl\GSL.natvis" />
