More code cleanup Move some code out of ShaderCompile.cpp, remove special time function, now uses std::chrono Remove more unused code from cfgprocessor.cpp, also colorize combo debug and hook it up Get rid of stdext::hash_map, replace with chobo::flat_map

--- a/ShaderCompile/ShaderCompile.vcxproj
+++ b/ShaderCompile/ShaderCompile.vcxproj
@@ -187,9 +187,13 @@
     <ClInclude Include="cmdsink.h" />
     <ClInclude Include="d3dxfxc.h" />
     <ClInclude Include="ezOptionParser.hpp" />
+    <ClInclude Include="LZMA.hpp" />
+    <ClInclude Include="movingaverage.hpp" />
     <ClInclude Include="shadercompile.h" />
     <ClInclude Include="shader_vcs_version.h" />
+    <ClInclude Include="strmanip.hpp" />
     <ClInclude Include="subprocess.h" />
+    <ClInclude Include="termcolors.hpp" />
     <ClInclude Include="utlbuffer.h" />
     <ClInclude Include="utlintrusivelist.h" />
     <ClInclude Include="utlmemory.h" />
