Begone perl, replaced with python script Rework text file parsing to json

--- a/ShaderCompile/ShaderCompile.vcxproj
+++ b/ShaderCompile/ShaderCompile.vcxproj
@@ -175,6 +175,7 @@
   <ItemGroup>
     <ClCompile Include="cfgprocessor.cpp" />
     <ClCompile Include="d3dxfxc.cpp" />
+    <ClCompile Include="include\jsoncpp.cpp" />
     <ClCompile Include="ShaderCompile.cpp" />
     <ClCompile Include="subprocess.cpp" />
     <ClCompile Include="utlbuffer.cpp" />
