--- a/ShaderCompile/ShaderCompile.vcxproj.filters
+++ b/ShaderCompile/ShaderCompile.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="utlsymbol.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="include\jsoncpp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cfgprocessor.h">
