Use /Zc:__cplusplus

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,15 @@ set(SRC
     ShaderCompile/ShaderCompile.cpp
     ShaderCompile/shaderparser.cpp
     ShaderCompile/utlbuffer.cpp
-    ShaderCompile/utlsymbol.cpp
     )
 
 add_executable(ShaderCompile ${SRC})
 target_link_libraries(ShaderCompile re2::re2 Microsoft.GSL::GSL)
 include_directories(ShaderCompile/include shared/re2)
+
+if (WIN32)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
+endif()
 
 set_property(TARGET ShaderCompile PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 set_property(TARGET re2 PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
